tests/NormalTests/paczka1/fuzzy1/19683711.err
Error in line 3: b4ufzzD9 S506 65,6
Error in line 5: Cr5iTSn S395 7T,1
Error in line 1: S385 A394 84,5
Error in line 18: rbc S385 8,3
Error in line 20: b4ufzzD9 S506 22,7
Error in line 19: Cr5i2Sn S395 11,8
Error in line 23: rbc S395 62,9
Error in line 21: lidz A394 49,4
Error in line 25: Cr5i2Sn A394 8,0
